Added checkList component

--- a/Views/Product/Details.cshtml
+++ b/Views/Product/Details.cshtml
@@ -47,10 +47,10 @@
             stars.forEach(function (star, index) {
                 if (index < rating) {
                     star.classList.remove('text-muted');
-                    star.classList.add('text-warning');  // Bootstrap class for yellow/golden color
+                    star.classList.add('text-warning');  
                 } else {
                     star.classList.remove('text-warning');
-                    star.classList.add('text-muted');  // Bootstrap class for gray color
+                    star.classList.add('text-muted');  
                 }
             });
         }
